# parasite-LLM-analysis

./: .gitignore  README.md  build_database.py  compile_json_to_csv.py  main.py  post_process_findings.py  pyproject.toml  zai_batch_treatment.py  zai_llm_extraction.py
.github/workflows/: deploy.yml
site/oyster-parasite-findings/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
site/oyster-parasite-findings/public/: database
site/oyster-parasite-findings/src/: App.vue  style.css
site/oyster-parasite-findings/src/components/: InfoPanel.vue  LayerToggle.vue  LeftPanel.vue  MapView.vue
site/oyster-parasite-findings/src/data/: loader.ts  types.ts
site/oyster-parasite-findings/src/store/: useSelection.ts
site/oyster-parasite-findings/src/utils/: color.ts  spread.ts  stats.ts
